# vaas_algorithms

./: README.md
classification/: AlgoImgClsInterface.cpp  CMakeLists.txt  run.sh
classification/include/: AlgoImgClsInterface.h
classification/qcom/: AlgoImgCls.cpp
classification/qcom/include/: AlgoImgCls.h
common/snpe_task/: SNPETask.cpp
common/snpe_task/include/: SNPETask.h
common/utils/: VAASAlgoUtils.cpp
common/utils/include/: VAASAlgoLog.h  VAASAlgoUtils.h
mobilenet_ssd/: AlgoMobilenetSSDInterface.cpp  CMakeLists.txt
mobilenet_ssd/include/: AlgoMobilenetSSDInterface.h
mobilenet_ssd/qcom/: AlgoMobilenetSSD.cpp
mobilenet_ssd/qcom/include/: AlgoMobilenetSSD.h
